--- a/src/Lever/Lever.css
+++ b/src/Lever/Lever.css
@@ -6,10 +6,14 @@
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
+  /* border-top: 1px solid red; */
+
 }
 
 .arm {
   border-bottom: 8px solid var(--border-color);
+  /* border-bottom: 1px solid red; */
+
 }
 
 .fulcrum {
